--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=49c8eefc9d6934a7e64c",
-    "/css/app.css": "/css/app.css?id=dab60b4ce584b260da4a"
+    "/js/app.js": "/js/app.js?id=b08abbab9acf94ba1a0a60c79723ff00",
+    "/css/app.css": "/css/app.css?id=5aa283e71535133f44c565ae7b158f77"
 }
